# codebase-cartographer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/indexing/: discovery.py  git_history.py  js_parser.py  python_parser.py  scanner.py
backend/app/models/: graph.py
backend/app/services/: analysis.py  llm.py  neo4j_store.py
backend/tests/: test_analysis.py  test_js_parser.py  test_python_parser.py  test_scanner.py
docs/: architecture.md  submission.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
scripts/: check.sh
